# bcpm

./: .gitignore  BCPM_Implementation.ipynb  BayesianChangePointModel.ipynb  Bayesian_Change_Point_Model.ipynb  README.md
.ipynb_checkpoints/: BCPM_Implementation-checkpoint.ipynb  Bayesian_Change_Point_Model-checkpoint.ipynb
cpp/: CMakeLists.txt  compile
cpp/include/: bcpm.hpp  bcpm_comp.hpp  bcpm_dm.hpp  bcpm_g.h  bcpm_gaussian.hpp  bcpm_pg.hpp
cpp/old/: bcpm_compound.hpp  test_comp.cc  test_comp2.cc
cpp/test/: CMakeLists.txt  runner.cc  test_bcpm.cc  test_comp.cc  test_comp1.cc  test_comp2.cc  test_comp3.cc  test_compound2.cc  test_compound3.cc  test_dm.cc  test_dm_em.cc  test_gaussian.cc  test_gaussian_em.cc  test_old_bcpm.cc  test_pg.cc  test_pg_em.cc
cpp/visualize/: bcpm_plots.py  test_comp.py  test_dm.py  test_dm_em.py  test_pg.py  test_pg_em.py  utils.py
etc/: coal_mining.txt  coal_mining_accidents.txt  well_log.txt
jupyter-nb/: BCPM_Implementation.ipynb  Bayesian_Change_Point_Model.ipynb  DrawIntensity.ipynb  DrawMixtureComponents.ipynb
python/: demo.py  future.py  message.py  model.py  test.py  utils.py  visualize.py
python2/: bcpm.py  dm_bcpm.py  message.py
python2/test/: test_dm.py  test_utils.py
